fixed profile summary and profile view to avoid too long words that mess front up

--- a/app/assets/stylesheets/components/_card-profile.scss
+++ b/app/assets/stylesheets/components/_card-profile.scss
@@ -3,27 +3,31 @@
   .card-profile-summary-header {
     padding-top: 2em;
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     align-items: center;
     img {
-      width: 30vw;
+      width: 20vw;
+      min-width: 235px;
       height: auto;
       border-radius: 1%;
       box-shadow: 0rem .25rem .5rem 0rem rgba(23, 23, 23, 0.2);
+      margin-bottom: 1rem;
+      margin-right: 1rem;
     }
     .card-profile-summary-header-title {
+      width: 65vw;
+      min-width: 320px;
       font-family: $headers-font;
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       color: $dark-blue;
-      padding-right: 4rem;
-      padding-left: 4rem;
     }
   }
   .card-profile-summary-body {
     padding-top: 2rem;
     .card-profile-summary-body-text {
       font-family: $body-font;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       color: $dark-blue;
       padding-bottom: 1rem;
     }
